<resources>
    <string name="app_name">MusicWiki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musicwiki">MusicWiki</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_genre_to_start_with">Choose a genre to start with</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playcount">PlayCount</string>
    <string name="follower">Follower</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_albums">Top Albums</string>
</resources>