<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".genre.view.GenreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/musicwiki"
        android:textAppearance="@style/AppTheme.TextStyle.Bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/AppTheme.TextStyle.SemiBold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/choose_a_genre_to_start_with"
            android:textAppearance="@style/AppTheme.TextStyle.Regular" />

        <ImageView
            android:id="@+id/iv_show_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/bg_white_circle_black_border"
            android:src="@drawable/baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <include
        android:id="@+id/holder_progress"
        layout="@layout/layout_progress"/>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:layout_marginVertical="@dimen/margin_top"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_genre" />

</LinearLayout>